<resources>
    <string name="app_name">Intelligence Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">intelligence test</string>
    <string name="button">ENTER</string>
    <string name="textview_top">high score:%d</string>
    <string name="textview_score">score:%d</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_submit">SUBMIT</string>
    <string name="equal">=</string>
    <string name="index">Your Answer :</string>
    <string name="winmessage">Genius!!!</string>
    <string name="winscore">New Record:%d</string>
    <string name="backtotitle">Back</string>
    <string name="failed">Idiot!!!</string>
    <string name="failedscore">Your Score:%d</string>
    <string name="answer_message">Right! Go on</string>
</resources>